packages/cmk-frontend/src/themes/facelift/scss/_dashboard.scss
/* ... */
div.stats_dashlet {
  height: 100%;

  path.hexagon.empty {
    fill: $hexagon-empty-color;
    fill-opacity: $hexagon-empty-fill-opacity;
    stroke: $hexagon-empty-stroke-color;
    stroke-opacity: $hexagon-empty-stroke-opacity;
  }

  div.stats_table {
    position: absolute;
    right: 0;

    table {
      pointer-events: all;
      border-collapse: collapse;
    }

    td {
      padding: 3px;
    }

    td:last-child {
      width: 115px; // aligns the host and service stats tables
    }

    a {
      text-decoration: none;
      cursor: pointer;

      &.box {
        display: inline-block;
        width: $spacing-half;
        height: 14px;
        padding: 0;
        background-color: $font-color;
        border-radius: $theme-border-radius;

        &.critical {
          background-color: $hexagon-critical-color;
        }

        &.unknown {
          background-color: $hexagon-unknown-color;
        }

        &.warning {
          background-color: $color-state-1-background;
        }

        &.downtime {
          background-color: $hexagon-downtime-color;
        }

        &.host_down {
          background-color: $hexagon-host-down-color;
        }

        &.ok {
          background-color: $success;
        }
      }

      &.count {
        float: right;
      }

      &.count:hover,
      &.text:hover {
        color: $font-color-green;
      }
    }

    .warning {
      background-color: transparent;
    }
  }

  &.hoststats div.stats_table,
  &.eventstats div.stats_table {
    top: 44px;
  }

  &.servicestats div.stats_table {
    top: 28px;
  }
}

